--- a/index.html
+++ b/index.html
@@ -4,22 +4,44 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Exo+2&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Pilot Project</title>
   </head>
   <body>
-    <h1>Warhammer</h1>
+    <section id="first_section"><h1>Warhammer</h1></section>
 
+    <section id="second_section">
+      <img src="højformat.webp" alt="" />
+      <div class="col">
+        <h3>Hvordan det skete</h3>
+        <p>
+          Hør Loke fortælle om sin passion for Warhammer, hvordan det startede
+          og hvad det er der gør det til sådan en fed hoppy, i denne film skabt
+          af Mathilde Skriver Eriksen. <br />
+          Her tager Loke os på en rejse ind i verden af Warhammer og præsentære
+          os for hvorfor han holder så meget af spillet.
+        </p>
+      </div>
+    </section>
     <div class="videoer">
       <div class="video1">
-        <div class="col1">jbvbhjsbhvk</div>
+        <div class="col1"><h3>Video 1</h3></div>
         <div class="col2">
-          <video src=""></video>
+          <video
+            src="https://mathildese.dk/kea/05_indhold/01-pilot/warhammer.mp4"
+            controls
+          ></video>
         </div>
       </div>
 
       <div class="video2">
-        <div class="col1">jbvbhjsbhvk</div>
+        <div class="col1"><h3>Video 2</h3></div>
         <div class="col2">
           <iframe
             width="560"
@@ -33,6 +55,16 @@
         </div>
       </div>
     </div>
+
+    <section id="fourth_section">
+      <div class="col">
+        <h4>Medvirkende</h4>
+        <p>Loke Emil Vinther-Jensen</p>
+        <h4>Interview af</h4>
+        <p>Mathilde Skriver Eriksen</p>
+      </div>
+      <img src="loke_portraet.webp" alt="billede af Loke" />
+    </section>
 
     <footer></footer>
   </body>
