--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <section id="first_section"><h1>Warhammer</h1></section>
 
     <section id="second_section">
-      <img src="højformat.webp" alt="" />
+      <img src="højformat.webp" alt="warhammer figur" />
       <div class="col">
         <h3>Hvordan det skete</h3>
         <p>
